tests/errors/missing_match_block.drast
// # TEST: match requires indented block
// # EXPECT: error
// # ERROR_CONTAINS: expected match block

main, int
	value = 1
	match value
	return 0
